// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package kuscia.proto.api.v1alpha1.datamesh;

import "kuscia/proto/api/v1alpha1/datamesh/domaindata.proto";
import "kuscia/proto/api/v1alpha1/datamesh/domaindatasource.proto";
import "kuscia/proto/api/v1alpha1/datamesh/flightdm.proto";

option go_package = "github.com/secretflow/kuscia/proto/api/v1alpha1/datamesh";
option java_package = "org.secretflow.v1alpha1.datamesh";

message CommandDataMeshQuery {
  CommandDomainDataQuery query = 1;
  DomainData domaindata = 2 ;
  DomainDataSource datasource = 3;
}

message CommandDataMeshUpdate {
  CommandDomainDataUpdate update = 1;
  DomainData domaindata = 2 ;
  DomainDataSource datasource = 3;
}
